Assertion failure: IsCSSEnabled(), at src/editor/libeditor/HTMLStyleEditor.cpp:896
Categories
(Core :: DOM: Editor, defect)
Tracking
()
People
(Reporter: tsmith, Assigned: masayuki)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: assertion, regression, testcase, Whiteboard: [bugmon:bisected,confirmed], [wptsync upstream])
Attachments
(2 files)
Assertion failure: IsCSSEnabled(), at /builds/worker/checkouts/gecko/editor/libeditor/HTMLStyleEditor.cpp:896
0|0|libxul.so|mozilla::HTMLEditor::ClearStyleAt(mozilla::EditorDOMPointBase<nsCOMPtr<nsINode>, nsCOMPtr<nsIContent> > const&, nsAtom*, nsAtom*)|hg:hg.mozilla.org/mozilla-central:editor/libeditor/HTMLStyleEditor.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|896|0x29
0|1|libxul.so|mozilla::HTMLEditor::CreateStyleForInsertText(mozilla::dom::AbstractRange const&)|hg:hg.mozilla.org/mozilla-central:editor/libeditor/HTMLEditSubActionHandler.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|6865|0x12
0|2|libxul.so|mozilla::HTMLEditor::HandleInsertText(mozilla::EditSubAction, nsTSubstring<char16_t> const&)|hg:hg.mozilla.org/mozilla-central:editor/libeditor/HTMLEditSubActionHandler.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1446|0x10
0|3|libxul.so|mozilla::EditorBase::InsertTextAsSubAction(nsTSubstring<char16_t> const&)|hg:hg.mozilla.org/mozilla-central:editor/libeditor/EditorBase.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|5156|0x12
0|4|libxul.so|mozilla::EditorBase::InsertTextAsAction(nsTSubstring<char16_t> const&, nsIPrincipal*)|hg:hg.mozilla.org/mozilla-central:editor/libeditor/EditorBase.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|5124|0x8
0|5|libxul.so|mozilla::InsertPlaintextCommand::DoCommandParam(mozilla::Command, nsTSubstring<char16_t> const&, mozilla::TextEditor&, nsIPrincipal*) const|hg:hg.mozilla.org/mozilla-central:editor/libeditor/EditorCommands.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|852|0xe
0|6|libxul.so|mozilla::dom::Document::ExecCommand(nsTSubstring<char16_t> const&, bool, nsTSubstring<char16_t> const&, nsIPrincipal&, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/base/Document.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|4882|0x1e
0|7|libxul.so|mozilla::dom::Document_Binding::execCommand(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&)|s3:gecko-generated-sources:8f7281e3ba1d600673dcaa1ac04d192ebae5bd1389403ef4cb1737261df8d246aba5da557aa502b708e3a3d18afebea6aedb14885532cb2904ce3fbf2ec40b9f/dom/bindings/DocumentBinding.cpp:|3469|0x34
0|8|libxul.so|bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|3219|0x21
0|9|libxul.so|CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|486|0x12
0|10|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|578|0xe
0|11|libxul.so|InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|641|0x10
0|12|libxul.so|Interpret(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|645|0xa
0|13|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|458|0xb
0|14|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|613|0x8
0|15|libxul.so|InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|641|0x10
0|16|libxul.so|<name omitted>|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|658|0xb
0|17|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|2842|0x23
0|18|libxul.so|mozilla::dom::EventListener::HandleEvent(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&)|s3:gecko-generated-sources:2563ad09677feb8ddf64827a409899848ef6a80bfacaa11f581c512536a6fb0c779d8b29517ba6358a054c6d475f770bf7bac2913a941d0394881c5649b08603/dom/bindings/EventListenerBinding.cpp:|55|0xe
0|19|libxul.so|void mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)|s3:gecko-generated-sources:99837b3cdc69c5eb1234f9d2b3e771dcff734d56a022bedb1d00c0cf4ee6243fb5c91397a058f2ddab63bda8ed6b581ea1232a0229033866910c7289d24cbc2d/dist/include/mozilla/dom/EventListenerBinding.h:|66|0x21
0|20|libxul.so|mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1082|0x2c
0|21|libxul.so|mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1280|0x16
0|22|libxul.so|mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|355|0xb
0|23|libxul.so|mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|557|0x19
0|24|libxul.so|mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1054|0x5
0|25|libxul.so|mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsPresContext*, nsEventStatus*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|0|0x8
0|26|libxul.so|nsINode::DispatchEvent(mozilla::dom::Event&, mozilla::dom::CallerType, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1302|0x10
0|27|libxul.so|mozilla::dom::EventTarget::DispatchEvent(mozilla::dom::Event&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventTarget.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|178|0x33
0|28|libxul.so|mozilla::AsyncEventDispatcher::Run()|hg:hg.mozilla.org/mozilla-central:dom/events/AsyncEventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|69|0x22
0|29|libxul.so|nsContentUtils::RemoveScriptBlocker()|hg:hg.mozilla.org/mozilla-central:dom/base/nsContentUtils.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|5344|0x11
0|30|libxul.so|mozilla::dom::Document::EndUpdate()|hg:hg.mozilla.org/mozilla-central:dom/base/Document.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|7090|0x5
0|31|libxul.so|mozAutoDocUpdate::~mozAutoDocUpdate()|hg:hg.mozilla.org/mozilla-central:dom/base/mozAutoDocUpdate.h:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|34|0x10
0|32|libxul.so|mozilla::dom::Element::SetAttr(int, nsAtom*, nsAtom*, nsTSubstring<char16_t> const&, nsIPrincipal*, bool)|hg:hg.mozilla.org/mozilla-central:dom/base/Element.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|2224|0x5
0|33|libxul.so|mozilla::dom::Element::SetAttribute(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, nsIPrincipal*, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/base/Element.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1291|0x24
0|34|libxul.so|mozilla::dom::Element_Binding::setAttribute(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&)|s3:gecko-generated-sources:e8a031c9107e01c2944c0e597a46fb06213c4d13a8696763d2262c4869a164133bde64b265f69dce8c4b37d84332ce136336057b822b79c94921e34559675c5a/dom/bindings/ElementBinding.cpp:|1345|0xb
0|35|libxul.so|bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|3219|0x21
0|36|libxul.so|CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|486|0x12
0|37|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|578|0xe
0|38|libxul.so|InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|641|0x10
0|39|libxul.so|Interpret(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|645|0xa
0|40|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|458|0xb
0|41|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|613|0x8
0|42|libxul.so|InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|641|0x10
0|43|libxul.so|<name omitted>|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|658|0xb
0|44|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|2842|0x23
0|45|libxul.so|mozilla::dom::EventHandlerNonNull::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&)|s3:gecko-generated-sources:5ceb4fd1d8dc61bfa9cb634c1ccbea88477929f8e3cd832f14dbaaa72fb11378c7536241ae3f9b1a6d2506d829d115fe64e0fdcf3301157cfcf64f24a4f984df/dom/bindings/EventHandlerBinding.cpp:|276|0xb
0|46|libxul.so|void mozilla::dom::EventHandlerNonNull::Call<nsCOMPtr<mozilla::dom::EventTarget> >(nsCOMPtr<mozilla::dom::EventTarget> const&, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)|s3:gecko-generated-sources:5abc72777d30ad0ea7b8b3e1392cd7961bd73b8cd08e5ab209f3b42251def563ee9c9a7cea98a24d0fa9d867edfc0c0297c165b0d167458ac5a2af4b7a0caebe/dist/include/mozilla/dom/EventHandlerBinding.h:|367|0x28
0|47|libxul.so|mozilla::JSEventHandler::HandleEvent(mozilla::dom::Event*)|hg:hg.mozilla.org/mozilla-central:dom/events/JSEventHandler.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|201|0x2e
0|48|libxul.so|mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1088|0xc
0|49|libxul.so|mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1280|0x16
0|50|libxul.so|mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|355|0xb
0|51|libxul.so|mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|557|0x19
0|52|libxul.so|mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1054|0x5
0|53|libxul.so|nsDocumentViewer::LoadComplete(nsresult)|hg:hg.mozilla.org/mozilla-central:layout/base/nsDocumentViewer.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1148|0x1c
0|54|libxul.so|nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, nsresult)|hg:hg.mozilla.org/mozilla-central:docshell/base/nsDocShell.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|5710|0x18
0|55|libxul.so|nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult)|hg:hg.mozilla.org/mozilla-central:docshell/base/nsDocShell.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|5452|0xb
0|56|libxul.so|non-virtual thunk to nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult)|hg:hg.mozilla.org/mozilla-central:docshell/base/nsDocShell.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|0|0x10
0|57|libxul.so|nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1377|0x2b
0|58|libxul.so|nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|937|0x28
0|59|libxul.so|nsDocLoader::DocLoaderIsEmpty(bool, mozilla::Maybe<nsresult> const&)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|757|0xe
0|60|libxul.so|nsDocLoader::OnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|640|0x12
0|61|libxul.so|non-virtual thunk to nsDocLoader::OnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|0|0xd
0|62|libxul.so|mozilla::net::nsLoadGroup::NotifyRemovalObservers(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/base/nsLoadGroup.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|615|0x14
0|63|libxul.so|mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/base/nsLoadGroup.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|522|0xe
0|64|libxul.so|mozilla::dom::Document::DoUnblockOnload()|hg:hg.mozilla.org/mozilla-central:dom/base/Document.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|10722|0x1c
0|65|libxul.so|mozilla::dom::Document::UnblockOnload(bool)|hg:hg.mozilla.org/mozilla-central:dom/base/Document.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|10654|0x8
0|66|libxul.so|mozilla::LoadBlockingAsyncEventDispatcher::~LoadBlockingAsyncEventDispatcher()|hg:hg.mozilla.org/mozilla-central:dom/events/AsyncEventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|117|0x15
0|67|libxul.so|<name omitted>|hg:hg.mozilla.org/mozilla-central:dom/events/AsyncEventDispatcher.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|115|0xe
0|68|libxul.so|mozilla::Runnable::Release()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|64|0x35
0|69|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|147|0x8
0|70|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|1238|0xe
0|71|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|501|0xc
0|72|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|87|0x7
0|73|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|315|0x17
0|74|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|290|0x8
0|75|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|137|0xd
0|76|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|913|0xe
0|77|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|237|0x5
0|78|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|315|0x17
0|79|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|290|0x8
0|80|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|744|0x5
0|81|firefox-bin|content_process_main(mozilla::Bootstrap*, int, char**)|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|56|0x11
0|82|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:f05a0084c5f20abf47fa332ab5ec5c953ba48eb1|303|0x20
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
I understand what's going on here. The MOZ_ASSERT
is not necessary, but it indicates that we don't support this kind of editing in non-CSS mode. I'll write a WPT, remove the MOZ_ASSERT
and file a follow up bug.
Assignee | ||
Comment 3•4 years ago
|
||
When the method detects the style coming from a parent block, the MOZ_ASSERT
checks whether the current mode is "style with CSS" or not because currently,
HTMLEditor
does not use <span>
with CSS when the mode is not "style with
CSS". However, fixing it requires bigger patch, and the change does not match
with the bug's summary. So, I just remove the MOZ_ASSERT
, add WPT and filed
bug 1649639 for the root issue.
Updated•4 years ago
|
Comment 6•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Comment 8•4 years ago
|
||
Bugmon Analysis
Verified bug as fixed on rev mozilla-central 20210408215439-970ef713fe58.
Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.
Description
•